--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>This Is Geeky Shows project</h1>
     <h2>I am adding h2 </h2>
-</body>
+
+    <h1>This Is Geeky Shows project</h1>
+    <h2>I am adding h2 </h2>
+</body>   
 </html>
