added a div tag..

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 
     <h1>This Is Geeky Shows project</h1>
     <h2>I am adding h2 </h2>
+  
+       <div>
+        <h1 class="a">My Name Is Durga Mohapatra</h1>
+        <h2 class="a">I am From Odisha</h2>
+       </div>
 </body>   
 </html>
