--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
   
        <div>
         <h1 class="a">My Name Is Durga Mohapatra</h1>
-        <h2 class="a">I am From Odisha</h2>
+        <h2 class="a">I am From Odisha,balasore</h2>
+       </div>
+    
+    
+    div>
+        <h1 class="a">My Name Is Satya Narayan Mohapatra</h1>
+        <h2 class="a">I am From Odisha,Balasore</h2>
        </div>
 </body>   
 </html>
